--- a/My Website/index.html
+++ b/My Website/index.html
@@ -9,7 +9,22 @@
 	<body>
 
 
-		<!-- markup goes here -->
+		<div id="page">
+			<header></header>
+
+			<section class="main"></section>
+
+			<section class="atmosphere"></section>
+
+			<section></section>
+
+			<section class="how-to"></section>
+
+			<nav></nav>
+
+			<footer></footer>
+
+		</div>
 
 
 
