--- a/My Website/index.html
+++ b/My Website/index.html
@@ -10,7 +10,13 @@
 
 
 		<div id="page">
-			<header></header>
+			<header>
+				<a class="logo" title="Everyday Things" href="http://codifydesign.com">Everyday Things</a>
+				<div class="hero">
+					<h1>Add interest with natural textures</h1>
+					<a class="btn" title="Get advive from top designers" href="#">Get advive from top designers</a>
+				</div>
+			</header> 
 
 			<section class="main"></section>
 
