Add script tag for all .js in HTML file

--- a/JavaScript Playground/index.html
+++ b/JavaScript Playground/index.html
@@ -25,6 +25,10 @@
   </head>
   <body>
     <h1>How JavaScript Works Behind the Scenes</h1>
-    <script src=""></script>
+    <script src="scooping-in-Practice.js"></script>
+    <script src="Hoisting-and-TDZ-in-Practice.js"></script>
+    <script src="Object-References-in-Practice.js"></script>
+    <script src="The-this-Keyword-in-Practice.js"></script>
+    <script src="Regular-Functions-vs-Arrow-Functions.js"></script>
   </body>
 </html>
